- BsToggleButton: add "icon-size" props, fixed extra space that caused by check-icon feature - BsTooltip, BsPopover: some improvement and now sharing the same engine to compute their position - BsTooltip: fix position issue when scrolling document

--- a/src/components/Tooltip/tooltip.scss
+++ b/src/components/Tooltip/tooltip.scss
@@ -14,7 +14,7 @@
     --#{vars.$prefix}tooltip-padding-y: #{vars.$tooltip-padding-y};
 
     margin: 0;
-    position: absolute;
+    position: fixed;
 
     > .#{vars.$prefix}tooltip-arrow {
       width: var(--#{vars.$prefix}tooltip-arrow-size);
